# ARGOS

./: .dockerignore  .env.example  .gitignore  ARGOS_VISION_2.0.docx  CLAUDE.md  DECISIONES_V5.md  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  contract-tests.yml  deploy.yml
.planning/: phase_0_prompt.md  phase_2.5_prompt.md  phase_3_prompt.md
docs/: VISION_2_0.md  VISION_2_1.md
docs/canonicas/: README.md  apis_externas.md  apis_internas.md  colecciones_mongo.md  eventos.md  flujos_negocio.md  integraciones_sismo.md  score_engine_contract.md
docs/claude/: README.md  build_config.md  build_market_complete.md  deuda_tecnica.md  errores_recurrentes.md  phase_0_bootstrap.md  phase_1_marketplace.md  phase_2.5_alineacion.md  phase_2_fb_ads.md  phase_2_score_engine.md  phase_3_capa1.md  phase_3_strategist.md  phase_3_whatsapp_kyc.md  phase_4_cobranza.md  phase_4_sismo.md  phase_5_mantenimiento.md  phase_6_fb_ads.md  phase_7_social.md  phase_8_media_buyer.md  phase_9_comercial.md
docs/knowledge/: README.md  modelos_llm.md  partners.md  stack.md
src/backend/: README.md
src/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
tests/backend/: conftest.py  test_alerts_api.py  test_alerts_service.py  test_argos_events_metadata_mutation.py  test_audit_writer.py  test_auth.py  test_brief_delivery.py  test_briefing_api.py  test_catalog_search.py  test_cgo_role.py  test_classifier.py  test_competitors_api.py  test_compliance_officer.py  test_health.py  (+37 more)
(+178 files in other folders)
