[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-backend"
version = "0.1.0"
description = "ARGOS · cerebro de inteligencia comercial + WhatsApp + Score Engine de RODDOS S.A.S."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "RODDOS S.A.S.", email = "andres@roddos.com" },
]
dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.40",
    "pydantic[email]>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "pyjwt[crypto]>=2.8,<3.0",
    "bcrypt>=4.1,<5.0",
    "motor>=3.5,<4.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0.7,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.1,<7.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.3,<1.0",
]

[tool.setuptools.packages.find]
where = ["src/backend"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
pythonpath = ["src/backend"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls in Depends() defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
